position fixed for offcanvas deleted it did not work on mobile devices

--- a/src/siguvtheme/resources/static/siguv.less
+++ b/src/siguvtheme/resources/static/siguv.less
@@ -652,33 +652,27 @@ div#navigation-mobile > ul > li:hover a {
 #wrapper {
     padding-left: 0;
 }
-
-#sidebar-wrapper {
+ #sidebar-wrapper {
     z-index: 1000;
-    position: fixed;
- //top:175px; 
-    width: 0;
+    /*position: fixed;*/
+    /*width: 0;*/
     margin-left: 0px;
-}
-#wrapper.toggled #sidebar-wrapper {
-  //width: 250px;
-}
-#wrapper.toggled #page-content-wrapper {
+  }
+  #wrapper.toggled #page-content-wrapper {
     margin-left: 250px;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-}
-
-.sidebar-nav {
+  }
+  .sidebar-nav {
     position: absolute;
-    top: 0;
+    top: 42px;
     width: 240px;
     margin: 0 0 0 -5px;
     padding: 0;
     list-style: none;
-}
+  }
 
 .sidebar-nav li {
     text-indent: 10px;
